Tue Jun 21 arton
 *lib/rjb.rb
	add JAVA_HOME/jre/bin to PATH env.vars for LoadLibrary can load further dlls
Fri Nov 27 arton
 *ext/rjb.c
	RJB_VERSION -> 1.5.4
	copy back char[] contents into original array
 *test/test.rb
	add char array test (test_bothdirection_chararray)
Sat Dec 20 2014 arton
 *ext/rjb.c
	RJB_VERSION -> 1.5.3
	select preferable constructor if argument is an array (for java.lang.String)
 *test/test.rb
	change literals to constants for kanji strings
Sun Dec 14 2014 arton
 *lib/rjb.rb
	FakeDL for Rubinius
 *ext/riconv.c
	Change variable name for avoiding conflicion (Runinius)
 *ext/rjb.c
	RJB_VERSION -> 1.5.2
	Support Rubinius (Rubinius's block is T_OBJECT instead of T_DATA -> affected to anonclass)
 *test/test.rb
	skip fixnum range test if Rubinius
Tue Sep 23 2014 arton
 *ext/rjb.c
	RJB_VERSION -> 1.5.1
	more weight for array and true/false
Sat Sep 20 2014 arton
 *ext/rjb.c
	RJB_VERSION -> 1.5.0
	fix ctor_sigs with non argment ctor (represented by '')
	select preferable constructor
 *ext/riconv.c
	restruct encoding function
 *test/test.rb
	add constructor selection test (Ljava.lang.String; vs [B)
Wed Jan 15 2014 arton
 *rjb.rake
	add lib/rjb/*.rb into gem
Fri Jan 4 2014 arton
 *test/Test.java
 *test/rjbtest.jar
	add inner exception test
 *test/test.java
	add inner exception test
Fri Jan 3 2014 arton
 *ext/rjb.c
	RJB_VERSION -> 1.4.9
 *ext/rjbexception.c
	make J#cause to the instance method for resolving Ruby 2.1 confliction.
Sun Jun 23 2013 arton
 *ext/rjb.c
	RJB_VERSION -> 1.4.8
	create typed array exactly (reported by reinvanmeeteren on https://github.com/arton/rjb/issues/23)
 *test/test.rb
	add typed array test
 *test/Test.java
	add typed array test
Tue Jun 18 2013 arton
 *ext/load.c
	check fiddle has dlopen (after ruby 2.0).
Tue Jun 18 2013 arton
 *ext/rjb.c
	RJB_VERSION -> 1.4.7
 *ext/load.c
	rqeuire fiddle first, then dl. the patch originally created by Victor Lellis.
Fri May 17 2013 arton
 *test/test.rb
	add Byte test
Sun Apr 48 2013 arton