@@ -1,3 +1,4 @@
+package jp.co.infoseek.hp.arton.rjb;
 public interface Two {
     public String method1();
     public String method2();
